--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,17 +6,17 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="marketplace">Search Causes</a></li>
+      <li><a routerLink="admin">Admin</a></li>
     </ul>
   </div>
 </nav>
-
 <div class="container">
   <h1>{{title}}</h1>
   <router-outlet></router-outlet>
 </div>
-
+<hr>
 <footer class="footer">
   <div class="container">
-    <a class="text-muted" routerLink="fundraiser">CREATE A DreamCom CAUSE!</a>
+    <a class="text-muted" routerLink="admin">Create a cause to donate to</a>
   </div>
 </footer>
