--- a/src/app/cause-detail/cause-detail.component.html
+++ b/src/app/cause-detail/cause-detail.component.html
@@ -1,9 +1,11 @@
 <div>
+  <p>SPECIFIC CAUSE</p>
   <!-- HTML USES BRACKET NOTATION AND PIPES TO CALL causeToDisplay function and async to display styling and other information regardless of data being undefined in Firebase -->
 
   <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">{{(causeToDisplay | async)?.name}}</h1>
+      <h3>${{(causeToDisplay | async)?.goal}} FUNDING GOAL</h3>
       <h3>${{(causeToDisplay | async)?.goal}} FUNDING GOAL</h3>
     <p class="lead">{{(causeToDisplay | async)?.description }}</p>
     <p>{{(causeToDisplay | async)?.category}}</p>
